Version 10 --
	* memset() our pwd/bindip

Version 9 -- Fri, 19 Jan 2007 15:32:00 +0100
	* Add a warning about TERM and KILL in README
	* Merge a patch from Neil McGovern:
	  - don't go in swap, always stay in memory
	  - if /etc/sysrqd.bind exists, bind to a specific ip
	    instead of any.

Version 8 -- Tue, 11 Jul 2006 11:41:05 +0200
	* Use official ports registered by IANA:
	sysrqd          4094/tcp   sysrq daemon
	sysrqd          4094/udp   sysrq daemon

Version 7 -- Tue, 16 May 2006 15:55:55 +0200
	* Call daemon() instead of simply forking

Version 6 -- Tue, 16 May 2006 15:00:44 +0200
	* Fix bug with pid file
	 (Thanks to Norbert Kiesel <nkiesel@tbdnetworks.com>)
	* Change default port to 880

Version 5 -- Mon,  1 May 2006 11:58:21 +0200
	* Fix little bug with open()

Version 4 -- Sun, 30 Apr 2006 21:50:51 +0200
	* Add support of syslog
	* Fork and run in background
	* Write a pid file
	
Version 3 -- Sat, 11 Mar 2006 11:48:00 +0100
	* Fix little bug if password file does not have \n

Version 2 -- Mon, 29 Aug 2005 17:06:00 +0200
	* Remove init.d script

Version 1 -- Mon, 29 Aug 2005 11:02:26 +0200
	* Initial release