@@ -1,5 +1,6 @@
 Version 10 --
 	* memset() our pwd/bindip
+	* Merge read password and bindfile functions
 
 Version 9 -- Fri, 19 Jan 2007 15:32:00 +0100
 	* Add a warning about TERM and KILL in README
